working on anonym classes converting